--- a/ubuntu2/src/main/resources/application.yaml
+++ b/ubuntu2/src/main/resources/application.yaml
@@ -12,3 +12,15 @@ spring:
         greetings-out:
           destination: greetings
           contentType: application/json
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/ms
+    username: postgres
+    password: 123456
+
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  hibernate:
+    ddl-auto: update
