--- a/ubuntu2/pom.xml
+++ b/ubuntu2/pom.xml
@@ -19,7 +19,7 @@
     <repositories>
         <repository>
             <id>spring-milestones</id>
-            <title>Spring Milestones</title>
+            <name>Spring Milestones</name>
             <url>http://repo.spring.io/libs-milestone</url>
             <snapshots>
                 <enabled>false</enabled>
